<resources>
    <string name="app_name">Hipla Office</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_as_employee">Login as an Employee</string>
    <string name="password">Password</string>
    <string name="office">Office</string>
    <string name="smart">Smart</string>
    <string name="username">Username</string>
    <string name="create_account">Create an account for a seamless experience.\nPlease provide the following details</string>
    <string name="guest">Guest</string>
    <string name="employee">Employee</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="already_an_account">Already have an account?</string>
    <string name="or">- Or -</string>
    <string name="check_your_email">Enter a valid Username</string>
    <string name="check_your_password">Enter a valid Password</string>
    <string name="enetr_valid_username">Enter a valid Username</string>
    <string name="enetr_valid_password">Enter a valid Password</string>
    <string name="enetr_valid_fname">Enter your First Name</string>
    <string name="enetr_valid_lname">Enter your Last Name</string>
    <string name="enetr_valid_phone">Enter a valid Phone Number</string>
    <string name="enetr_valid_email">Enter a valid Email Id</string>
    <string name="enetr_valid_department">Enter your department</string>
    <string name="enetr_valid_designation">Enter your Designation</string>
    <string name="company">Company</string>
    <string name="please_try_again">Something went wrong. Please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="shedule">Schedule</string>
    <string name="meeting">Meeting</string>
    <string name="order">Order</string>
    <string name="food">FOOD</string>
    <string name="indbox">Inbox</string>
    <string name="message">Message</string>
    <string name="manage">Manage</string>
    <string name="upcoming">Upcoming</string>
    <string name="fixed_meeting">Fixed Meeting</string>
    <string name="flexible_meeting">Flexible Meeting</string>
    <string name="webex_meeting">WebEx Meeting</string>
    <string name="book_now"><![CDATA[Book now >>]]></string>
    <string name="select_meeting_type">Select a meeting type</string>
    <string name="enter_information">Enter information about meeting</string>
    <string name="name">Name : </string>
    <string name="example_name">eg. any name</string>
    <string name="agenda">Agenda : </string>
    <string name="check_your_connection">Internet Connection Problem</string>
    <string name="confirm_meeting">Confirm Meeting</string>
    <string name="please_select_contact">Please select contact to proceed.</string>
    <string name="please_select_timeslot">Please select time slot to proceed.</string>
    <string name="please_select_appointment_location">Please select appointment location</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_select_date">Please select multiple dates to proceed</string>
    <string name="meeting_request_sent">Meeting Request Sent</string>
    <string name="meeting_on">Meeting on</string>
    <string name="meeting_with">Meeting with %s</string>
    <string name="once_meeting_confirmed">Once meeting is confirmed, will get notified with further details</string>
    <string name="to">to</string>
    <string name="this_slot_not_available">This slot\'s are not available</string>
    <string name="enter_agenda_for_the_meeting">Please enter agenda for the meeting</string>
    <string name="confirm">Confirm</string>
    <string name="ended">Ended</string>
    <string name="spotlight_search">SpotLight Search</string>
    <string name="my_appointments">My Meetings</string>
    <string name="request_received">Request Meetings</string>
    <string name="all">All</string>
    <string name="slash">/</string>
    <string name="pending">Pending</string>
    <string name="timing_format">%s - %s</string>
    <string name="cancelled">Cancelled</string>
    <string name="confirmed">Confirmed</string>
    <string name="agenda_value">%s</string>
    <string name="meeting_value">%s</string>
    <string name="meeting_date_value">Meeting Date : %s</string>
    <string name="meeting_location_value">Location : %s</string>
    <string name="post">Post</string>
    <string name="type_review_here">Type review here</string>
    <string name="outbox">Outbox</string>
    <string name="menu">Menu</string>
    <string name="create_message">Create Message</string>
    <string name="title">Title :</string>
    <string name="title_hint">Type message title here</string>
    <string name="message_title">Enter your message here :</string>
    <string name="message_hint">Type message here</string>
    <string name="phone_no">Phone No :</string>
    <string name="choose">Choose</string>
    <string name="submit">Submit</string>
    <string name="name_format">Name : %s</string>
    <string name="email_format">Email : %s</string>
    <string name="phone_format">Phone : %s</string>
    <string name="title_format">Title : %s</string>
    <string name="close">Close</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="home">Home</string>
    <string name="manage_meeting">Manage Meeting</string>
    <string name="notification">Notification</string>
    <string name="control_panel">Control Panel</string>
    <string name="profile_management">Profile Management</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="set_avability">Set Availability</string>
    <string name="message_small">Message</string>
    <string name="user_format">User : %s</string>
    <string name="first_name_format">First Name : %s</string>
    <string name="last_name_format">Last Name : %s</string>
    <string name="designation_format">Designation : %s</string>
    <string name="department_format">Department : %s</string>
    <string name="company_format">Company : %s</string>
    <string name="change_password">Change Password</string>
    <string name="update_device_information">Update Device Information</string>
    <string name="distance_notification">Distance Notification On/Off</string>
    <string name="device_updated">Device Information Updated Successfully</string>
    <string name="new_password">New Password :</string>
    <string name="password_hint">Enter New Password</string>
    <string name="about_us_string">Headquartered in Kolkata, Future Netwings has made its place among the best Network Services and Support Organizations of India. With a ISO 9001:2008 certified Quality Management System and a motto to provide Service &amp; Support exceeding global standards, our operations are spread across India and Singapore.



As a customer centric organization we maintain a huge stock of spares for quick service turnaround. Additionally, when the industry mostly relies on outsourced resources to carry out the services requiring specialized equipments, the availability of such critical resources inhouse has always been an unique advantage with us. No wonder the prestigious clientele we retain with conceit refer us willingly as their favored solutions partner.


Our diverse projects include extensive WAN infrastructures, Datacenter Setup, Indoor &amp; Outdoor Secure WiMax &amp; Wi-Fi, Video Conferencing, IP Telephony, Campus LANs, Intra City Fiber Optic Connectivity as well as Advanced Server and Desktop Level OS and Application Configuration. Behind every project our objective has been International Quality and Standards Adherence.</string>
    <string name="light_on">Light on</string>
    <string name="third">3rd</string>
    <string name="open_map">Open Map</string>
    <string name="open_door">Open Door</string>
    <string name="reconnect">Reconnect</string>
    <string name="meeting_cant_be_finished">Meeting is not finished till now.</string>
    <string name="you_will_be_late">You are going to be late for the meeting. Step out now.</string>
    <string name="you_will_reach_200m">You are about to reach your destination.</string>
    <string name="welcome_message">Welcome to future netwings. Connect to local wifi to gain access control.</string>
    <string name="you_will_late_and_reschedule">You are going to be late for the meeting. Try to reschedule the meeting.</string>
    <string name="meeting_over_can_extend">Your meeting is about to finish. You can extend your meeting.</string>
    <string name="want_to_extend">Do you want to extend this meeting?</string>
    <string name="reschedule_fixed_meeting">Reschedule Fixed Meeting</string>
    <string name="reschedule_flexible_meeting">Reschedule Flexible Meeting</string>
    <string name="extend_meeting">Extend your current meeting</string>
    <string name="you_cant_cancel_meeting_now">You can\'t cancel the meeting now.</string>
    <string name="you_cant_end_meeting_now">You can\'t end the meeting now.</string>
    <string name="you_cant_start_meeting_now">You can\'t start the meeting now.</string>
    <string name="you_are_running_late">You are getting late for the meeting. Try to reach early.</string>
    <string name="you_will_reach_400m">Your distance from the meeting location is about %s Meters.</string>
    <string name="you_will_reach_your_destination_in_mins">You will reach your destination in %s.</string>
    <string name="room1">Conference Room</string>
    <string name="room2">Small Conference Room</string>
    <string name="no_info_available">No Information Available</string>
    <string name="upcoming_meetings">Upcoming Meetings</string>
    <string name="schedule_your_meeting">Schedule your meeting</string>
    <string name="your_meeting">Your meeting</string>
    <string name="order_your_food">Order your food</string>
    <string name="manage_meetings">Manage Meetings</string>
    <string name="timings">Timing :</string>
    <string name="filter">Filter</string>
    <string name="all_notification">All Notification</string>
    <string name="clear">Clear All</string>
    <string name="tcs">\@TCS</string>
    <string name="meeting_going_to_start">Your meeting is going to start from %s today.</string>
    <string name="meeting_type">Meeting Type :</string>
    <string name="add_belongings">Add Belongings</string>
    <string name="add_receipent">Add Receipent</string>
    <string name="date">Date :</string>
    <string name="meeting_dates">Meeting Dates :</string>
    <string name="meeting_timing">Meeting Timing :</string>
    <string name="your_messages">Your messages</string>
    <string name="send_message">Send Message</string>
    <string name="to_header">To :</string>
    <string name="message_detail">Message Detail</string>
    <string name="enter_comments">enter your comments</string>
    <string name="create_meeting">Create Meeting</string>
</resources>