<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.hipla.smartoffice_tcs.dialogs.IndboxReadDialogFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/roundedcorner_background_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@+id/btn_close">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/message_detail"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_larg"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="@dimen/m30"
                    android:layout_height="@dimen/m30"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/m10"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m15"
                android:layout_marginRight="@dimen/m15"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/name_format"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/m20"
                    android:text="@string/email_format"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/m20"
                    android:text="@string/phone_format"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_medium" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/m20"
                    android:text="@string/title_format"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m15"
                android:layout_marginRight="@dimen/m15"
                android:layout_marginTop="@dimen/m20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/message"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_larg" />

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m10"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/message_hint"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_black"
                    android:textSize="@dimen/text_medium" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="@dimen/m20"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/text_larg"
            android:textColor="@color/text_white"
            android:text="@string/close"
            android:textAllCaps="true"
            android:gravity="center"
            android:background="@drawable/rounded_corner_blue"/>

    </RelativeLayout>

</layout>