<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_border_bold"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/m5"
        android:padding="@dimen/m20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_larg"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:background="@drawable/date_selected_white_rounded"
            android:layout_marginTop="@dimen/m10"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/text_gray"
            android:padding="@dimen/m5"
            android:hint="@string/password_hint"
            android:textSize="@dimen/text_larg"
            android:inputType="textPassword"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m25">

            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:background="@drawable/rounded_corner_blue"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/m10"
                android:layout_marginRight="@dimen/m10"
                android:textSize="@dimen/text_medium"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/text_white"/>

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:background="@drawable/rounded_corner_blue"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/m10"
                android:layout_marginRight="@dimen/m10"
                android:textSize="@dimen/text_medium"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_white"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>